syntax = "proto3";

package cloud.lazycat.apis.localdevice;

option go_package = "gitee.com/linakesi/lzc-sdk/lang/go/localdevice";

service UserConfig {
    rpc GetUserConfig(GetUserConfigRequest) returns (GetUserConfigResponse) {}
}

message GetUserConfigRequest {
    string userId = 1;
    string configKey = 3;
}

message GetUserConfigResponse {
    string configValue = 1;
}
